cleaned up styles

--- a/nashville.html
+++ b/nashville.html
@@ -29,9 +29,9 @@
                 <header class="header " role="banner">
             
                     <div class="logo">  
-                        <span class="logo__graphic"><h1>Joanna &#38; James</h1></span>
+                        <span class="logo__graphic"><h1 class="logo_name">Joanna &#38; James</h1></span>
                         <!-- <img width="177" height="41"  class="logo__graphic" src="http://www.mixd.co.uk/content/themes/mixd/assets/img/mixd-logo.svg" alt="Mixd" /> -->
-                        <span class="logo__tagline">Wedding of the Century</span>
+                        <span class="logo__tagline">join us in celebration</span>
                     </div>
                             
                     <a href="#" class="nav-toggle nav-toggle--open icon--menu" id="nav-open-btn"></a>
@@ -59,7 +59,7 @@
                                 <img src="png/jj2.jpg" class="figure__object">
                                 <br>
                                 <div class="copy-block p">
-                                <figcaption class="figure__caption">
+                                <figcaption class="non_figure__caption">
                                     <h1>NASHVILLE PARTY</h1>
                                         <article>We are so grateful to our wonderful friend, Sandy, for graciously offering her beautiful backyard for our party.</article>
 
