cleaned up style and add pictures

--- a/nashville.html
+++ b/nashville.html
@@ -9,7 +9,7 @@
     <title>James &#38; Joanna</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="style/css/font-awesomeSMALLER.css">
+
     
 
 </head>
@@ -49,7 +49,7 @@
                         <div class="figure__wrap">
 
                             <figure class="figure__inner">
-                                <img src="img/me_and_jo.png" class="figure__object">
+                                <img src="img/nashville.png" class="figure__object">
                                 <br>
                                 <div class="copy-block p">
                                 <figcaption class="non_figure__caption">
@@ -59,7 +59,7 @@
                                         <h3>Where:</h3>
 
                                         <article> 1452 Campbell Rd., Goodlettsville, TN. 37072<br>
-                                            <a class="small-btn" href="https://www.google.com/maps/place/1452+Campbell+Rd,+Goodlettsville,+TN+37072/@36.2983585,-86.7607418,13z/data=!4m2!3m1!1s0x88645ca2764c69e7:0xed639e06d8606db1"> Click for map</a>
+                                            <a class="small-btn" href="https://www.google.com/maps/place/1452+Campbell+Rd,+Goodlettsville,+TN+37072/@36.2983585,-86.7607418,13z/data=!4m2!3m1!1s0x88645ca2764c69e7:0xed639e06d8606db1" target="_blank"> Click for map</a>
                                         </article>
 
                                         <h3>Date:</h3>
