--- a/newEngland.html
+++ b/newEngland.html
@@ -9,7 +9,6 @@
     <title>James &#38; Joanna</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="style/css/font-awesomeSMALLER.css">
     
 
 </head>
@@ -49,7 +48,7 @@
                         <div class="figure__wrap">
 
                             <figure class="figure__inner">
-                                <img src="img/me_and_jo.png" class="figure__object">
+                                <img src="img/newEngland.png" class="figure__object">
                                 <br>
                                 <div class="copy-block p">
                                 <figcaption class="non_figure__caption">
