--- a/wedding.html
+++ b/wedding.html
@@ -9,11 +9,10 @@
     <title>James &#38; Joanna</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="style/css/font-awesomeSMALLER.css">
     
 
 </head>
-<body class="bg--green ">
+<body class="bg--purple ">
     <div class="outer">
         <div id="inner-wrap">
 
@@ -58,7 +57,7 @@
                                                     <p>Since neither of us is too crazy about being the center of attention, our ceremony will be very intimate with just our immediate families.</p>
                                             <p>However, we couldn’t imagine not celebrating this happy time without all of the wonderful friends and family we care so much about and we can’t wait to celebrate with you – even if in non-traditional form – in Nashville or in New England!</p>
                                             <br>
-                                            <div class="clean"><a href="nashville.html" class="small-btn">Nashville</a></div>
+                                            <div class="clean"><a href="nashville.html" class="btn">Nashville</a></div>
                                             <div class="clean"><a href="newEngland.html" class="small-btn">New England</a></div>
                                             <div class="clean"><a href="registry.html" class="small-btn">Registry</a></div>
                                             <div class="clean"><a href="index.html" class="btn">Back home</a></div>
