figures changed to divs and style added

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="figure figure_main">
                         <div class="figure__wrap">
 
-                            <figure class="figure__inner">
+                            <div class="figure__inner">
                                 
                                 <div class="img_wrapper">
                                     <img src="img/me_and_jo.png" class="figure__object" alt="" onload="JJWED.pic(this)
@@ -75,7 +75,7 @@
                                     </div>
                                 </figcaption>
 
-                            </figure>
+                            </div>
                         </div>
                     </div>
                      
