--- a/nashville.html
+++ b/nashville.html
@@ -56,7 +56,7 @@
                     <div class="figure figure_main">
                         <div class="figure__wrap">
 
-                            <figure class="figure__inner">
+                            <div class="figure__inner">
                                 <a class="sb-video" href="#slider">
                                     <div class="img_wrapper">
                                         <img src="img/nashville.png" class="figure__object" alt="" onload="JJWED.pic(this)">
@@ -92,7 +92,7 @@
                                     <div class="clean"><a href="index.html" class="btn">Back home</a></div>
                                 </figcaption>
                                 </div>
-                            </figure>
+                            </div>
                         </div>
                     </div>
                      
