--- a/newEngland.html
+++ b/newEngland.html
@@ -55,7 +55,7 @@
                     <div class="figure figure_main">
                         <div class="figure__wrap">
 
-                            <figure class="figure__inner">
+                            <div class="figure__inner">
                                 <a class="sb-video" href="#slider">
                                     <div class="img_wrapper">
                                         <img src="img/newEngland.png" class="figure__object" alt="" onload="JJWED.pic(this)">
@@ -98,7 +98,7 @@
                                     
                                     </figcaption>
                                 </div>
-                            </figure>
+                            </div>
                         </div>
                     </div>
                      
