--- a/registry.html
+++ b/registry.html
@@ -56,7 +56,7 @@
                     <div class="figure figure_main">
                         <div class="figure__wrap">
 
-                            <figure class="figure__inner">
+                            <div class="figure__inner">
                                 <div class="img_wrapper">
                                     <img src="img/registry.png" class="figure__object" alt="" onload="JJWED.pic(this)">
                                 </div>
@@ -80,11 +80,11 @@
                                     </div>
                                 </figcaption>
 
-                            </figure>
                             </div>
                         </div>
+                    </div>
                      
-        </div>
+            </div>
         </div>
 
     <script type='text/javascript' src='js/wedding.js'></script>
