--- a/wedding.html
+++ b/wedding.html
@@ -54,7 +54,7 @@
                     <div class="figure figure_main">
                             <div class="figure__wrap">
 
-                                <figure class="figure__inner">
+                                <div class="figure__inner">
                                     <div class="img_wrapper">
                                         <img src="img/secondPage.png" class="figure__object" alt="" onload="JJWED.pic(this)">
                                     </div>
@@ -75,7 +75,7 @@
                                         </div>
                                     </figcaption>
 
-                                </figure>
+                                </div>
                             </div>
                         </div>
                      
