--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
                             <div class="figure__inner">
                                 
-                                <div class="img_wrapper">
+                                <div class="img_wrapper ratio-size">
                                     <img src="img/me_and_jo.png" class="figure__object" alt="" onload="JJWED.pic(this)
                                     ">
                                 </div>
