--- a/nashville.html
+++ b/nashville.html
@@ -58,7 +58,7 @@
 
                             <div class="figure__inner">
                                 <a class="sb-video" href="#slider">
-                                    <div class="img_wrapper">
+                                    <div class="img_wrapper ratio-size">
                                         <img src="img/nashville.png" class="figure__object" alt="" onload="JJWED.pic(this)">
                                     </div>
                                 </a>
