--- a/newEngland.html
+++ b/newEngland.html
@@ -57,9 +57,10 @@
 
                             <div class="figure__inner">
                                 <a class="sb-video" href="#slider">
-                                    <div class="img_wrapper">
+                                    <div class="img_wrapper ratio-size">
                                         <img src="img/newEngland.png" class="figure__object" alt="" onload="JJWED.pic(this)">
                                     </div>
+                                </a>
                                 <br>
                                 <div class="copy-block p">
                                 <figcaption class="non_figure__caption">
