--- a/wedding.html
+++ b/wedding.html
@@ -55,7 +55,7 @@
                             <div class="figure__wrap">
 
                                 <div class="figure__inner">
-                                    <div class="img_wrapper">
+                                    <div class="img_wrapper ratio-size">
                                         <img src="img/secondPage.png" class="figure__object" alt="" onload="JJWED.pic(this)">
                                     </div>
                                     <br>
