--- a/registry.html
+++ b/registry.html
@@ -57,7 +57,7 @@
                         <div class="figure__wrap">
 
                             <div class="figure__inner">
-                                <div class="img_wrapper">
+                                <div class="img_wrapper ratio-size">
                                     <img src="img/registry.png" class="figure__object" alt="" onload="JJWED.pic(this)">
                                 </div>
                                 <br>
