--- a/registry.html
+++ b/registry.html
@@ -127,6 +127,10 @@
                 { href : "img/slider/go-sox.jpg", title : 'Go Red Sox!' },
                 { href : "img/slider/hats.jpg", title : "Party at Sandy's" },
                 { href : "img/slider/Newport.jpg", title : 'Overlooking the cliffs in Newport RI' },
+                { href : "img/slider/nashville-house.jpg", title : 'In front of our house in Nashville' },
+                { href : "img/slider/new-york.jpg", title : 'New York City 2011' },
+                { href : "img/slider/easter2014.jpg", title : 'Easter 2014' },
+                { href : "img/slider/beavertail.jpg", title : 'Beavertail State Park RI' },
                 { href : "img/slider/james-and-joanna.jpg", title : 'Two lucky people' }
             ]);
           });
