--- a/wedding.html
+++ b/wedding.html
@@ -67,7 +67,7 @@
                                                     <p>Since neither of us is too crazy about being the center of attention, our ceremony will be very intimate with just our immediate families.</p>
                                             <p>However, we couldn’t imagine not celebrating this happy time without all of the wonderful friends and family we care so much about and we can’t wait to celebrate with you – even if in non-traditional form – in Nashville or in New England!</p>
                                             <br>
-                                            <div class="clean"><a href="nashville.html" class="btn">Nashville</a></div>
+                                            <div class="clean"><a href="nashville.html" class="small-btn">Nashville</a></div>
                                             <div class="clean"><a href="newEngland.html" class="small-btn">New England</a></div>
                                             <div class="clean"><a href="registry.html" class="small-btn">Registry</a></div>
                                             <div class="sb-video clean"><a href="#slider" class="small-btn">Pictures</a></div>
@@ -122,6 +122,10 @@
                 { href : "img/slider/go-sox.jpg", title : 'Go Red Sox!' },
                 { href : "img/slider/hats.jpg", title : "Party at Sandy's" },
                 { href : "img/slider/Newport.jpg", title : 'Overlooking the cliffs in Newport RI' },
+                { href : "img/slider/nashville-house.jpg", title : 'In front of our house in Nashville' },
+                { href : "img/slider/new-york.jpg", title : 'New York City 2011' },
+                { href : "img/slider/easter2014.jpg", title : 'Easter 2014' },
+                { href : "img/slider/beavertail.jpg", title : 'Beavertail State Park RI' },
                 { href : "img/slider/james-and-joanna.jpg", title : 'Two lucky people' }
             ]);
           });
