final update for invite

--- a/newEngland.html
+++ b/newEngland.html
@@ -73,10 +73,6 @@
 
                                         <h3>Where:</h3><article> MIT Endicott House, 80 Haven St. Dedham, MA.</article>
 
-                                        <article>For out of town family and friends:</article>
-
-                                        <article>Please join us for brunch at the Endicott House on Sunday, August 30th from 10:00 am -12:00 pm.</article>
-
                                         <h3>Hotel:</h3>
 
 
@@ -84,7 +80,7 @@
 
                                         <h3>Getting around:</h3> 
 
-                                        <article>The Needham Sheraton is about 20 miles outside of Boston. If you don't rent a car, we will make sure you have a ride between the hotel and the Endicott House for the party and brunch. There are a couple of options for getting between the hotel and the airport without a rental car. The most convenient but also most expensive is a taxi, which costs around $70. You can also book a shared shuttle that costs $40 per person and $12 for each additional person at <a class="small-btn" href="http://www.ultimateshuttle.com">www.ultimateshuttle.com</a>.
+                                        <article>The Needham Sheraton is about 20 miles outside of Boston. If you don't rent a car, we will make sure you have a ride between the hotel and the Endicott House for the party. There are a couple of options for getting between the hotel and the airport without a rental car. The most convenient but also most expensive is a taxi, which costs around $70. You can also book a shared shuttle that costs $40 and $12 for each additional person at <a class="small-btn" href="http://www.ultimateshuttle.com">www.ultimateshuttle.com</a>.
                                         </article>
 
 
@@ -101,8 +97,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                     
+                    </div>    
                 </div>
             </div>
         </div>
@@ -152,6 +147,7 @@
                 { href : "img/slider/new-york.jpg", title : 'New York City 2011' },
                 { href : "img/slider/easter2014.jpg", title : 'Easter 2014' },
                 { href : "img/slider/beavertail.jpg", title : 'Beavertail State Park RI' },
+                { href : "img/slider/switzerland.jpg", title : 'In Wengen, Switzerland' },
                 { href : "img/slider/james-and-joanna.jpg", title : 'Two lucky people' }
             ]);
           });
