--- a/registry.html
+++ b/registry.html
@@ -68,10 +68,10 @@
                                         <p>We have registered for a limited number of items that we will enjoy using right away and that will prove a serious upgrade from our remaining college-era kitchen staples that have managed to survive far too many moves!</p>
 
                                         <p>
-                                            <a class="small-btn" href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?pwsToken=&eventType=Wedding&registryId=541797015&pwsurl=">Bed Bath &#38; Beyond Registry</a><br>
-                                            <a class="small-btn" href="http://www.crateandbarrel.com/Gift-Registry/joanna-geller-and-james-haley/r5268763">Crate &#38; Barrel Registry</a></p>
+                                            <a class="small-btn" href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?pwsToken=&eventType=Wedding&registryId=541797015&pwsurl=" target="_blank">Bed Bath &#38; Beyond Registry</a><br>
+                                            <a class="small-btn" href="http://www.crateandbarrel.com/Gift-Registry/joanna-geller-and-james-haley/r5268763" target="_blank">Crate &#38; Barrel Registry</a></p>
 
-                                        <p>As we're also looking forward to eventually bidding farewell to the loyal couches and chairs that have followed us around since our many moves, contributions to a furniture fund for the first home we buy together would also be greatly appreciated.</p>
+                                        <p>As we're also looking forward to bidding farewell to the loyal couches and chairs that have followed us around for many moves, we would greatly appreciate contributions toward the furniture that will eventually fill our first home.</p>
                                         <br>
                                         <div class="clean"><a href="nashville.html" class="small-btn">Nashville</a></div>
                                         <div class="clean"><a href="newEngland.html" class="small-btn">New England</a></div>
@@ -79,11 +79,9 @@
                                         <div class="clean"><a href="index.html" class="btn">Back home</a></div>
                                     </div>
                                 </figcaption>
-
                             </div>
                         </div>
-                    </div>
-                     
+                    </div>  
             </div>
         </div>
 
@@ -131,6 +129,7 @@
                 { href : "img/slider/new-york.jpg", title : 'New York City 2011' },
                 { href : "img/slider/easter2014.jpg", title : 'Easter 2014' },
                 { href : "img/slider/beavertail.jpg", title : 'Beavertail State Park RI' },
+                { href : "img/slider/switzerland.jpg", title : 'In Wengen, Switzerland' },
                 { href : "img/slider/james-and-joanna.jpg", title : 'Two lucky people' }
             ]);
           });
