--- a/wedding.html
+++ b/wedding.html
@@ -126,6 +126,7 @@
                 { href : "img/slider/new-york.jpg", title : 'New York City 2011' },
                 { href : "img/slider/easter2014.jpg", title : 'Easter 2014' },
                 { href : "img/slider/beavertail.jpg", title : 'Beavertail State Park RI' },
+                { href : "img/slider/switzerland.jpg", title : 'In Wengen, Switzerland' },
                 { href : "img/slider/james-and-joanna.jpg", title : 'Two lucky people' }
             ]);
           });
