--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta charset="utf-8">
  
     <title>James &#38; Joanna</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta content=
+        "initial-scale=1, minimum-scale=1, width=device-width, height=device-height, user-scalable=yes"
+    name="viewport">
     <link rel="stylesheet" href="style/style.css">
     <script type="text/javascript">
         var JJWED = JJWED || {};
