--- a/nashville.html
+++ b/nashville.html
@@ -288,7 +288,7 @@
                                         <article>A buffet dinner will begin at 5:30, followed by cake and a bonfire. Feel free to dress casually and to bring lawn games and musical instruments!</article> 
                                         <br>
 
-                                        <article>Please RSVP</article>
+                                        <article>Please RSVP below, by April 1.</article>
                                     <br>
                              
                                     <script type="text/javascript">
@@ -465,6 +465,7 @@
                 { href : "img/slider/new-york.jpg", title : 'New York City 2011' },
                 { href : "img/slider/easter2014.jpg", title : 'Easter 2014' },
                 { href : "img/slider/beavertail.jpg", title : 'Beavertail State Park RI' },
+                { href : "img/slider/switzerland.jpg", title : 'In Wengen, Switzerland' },
                 { href : "img/slider/james-and-joanna.jpg", title : 'Two lucky people' }
             ]);
           });
