--- a/newEngland.html
+++ b/newEngland.html
@@ -41,9 +41,8 @@
                         <a href="#" class="fa fa-times-circle fa-2x nav-toggle nav-toggle--close" id="nav-close-btn"></a>
 
                         <ul class="nav nav--primary">
-                            <li><a href="wedding.html">Wedding</a></li>
-                            <li><a href="nashville.html">Nashville</a></li>
-                            <li class="is-current is-current"><a href="newEngland.html">New England</a></li>
+                            <li><a href="party.html">The Party</a></li>
+                            <li class="is-current is-current"><a href="newEngland.html">Boston</a></li>
                             <li><a href="registry.html">Registry</a></li>
                         </ul>           
                     </nav>
